--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 </head>
 <body>
 
+    <header class="header header_style1">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9 col-lg-10">
+                    <div class="logo"><a href="index.html"><h2>LOGO</h2></a></div>
+                    <div class="main_menu float-right">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
 <!-- Bootstrap -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
