--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@
                 <div class="col-md-9 col-lg-10">
                     <div class="logo"><a href="index.html"><h2>LOGO</h2></a></div>
                     <div class="main_menu float-right">
-                        
+                        <div class="menu">
+                            <a href="#" class="menu-mobile">&nbsp;</a>
+                            <ul class="clearfix">
+                                <li class="active"><a href="index.html">Home</a></li>
+                                <li><a href="#">About</a></li>
+                                <li><a href="#">Service</a></li>
+                                <li><a href="#">Screenshots</a></li>
+                                <li><a href="#">Pricing</a></li>
+                                <li><a href="#">Team</a></li>
+                                <li><a href="#">Contact</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
